<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.oceantestws</groupId>
	<artifactId>oceantestws</artifactId>
	<packaging>war</packaging>
	<version>1.0-SNAPSHOT</version>
	<name>oceantestws</name>
	
	<properties>
	    <jdk.version>1.7</jdk.version>
		<spring.version>4.2.6.RELEASE</spring.version>
		<jstl.version>1.2</jstl.version>
		<maven.war.plugin.version>2.6</maven.war.plugin.version>
		<wildfly.maven.plugin.version>1.0.2.Final</wildfly.maven.plugin.version>
		<wildfly.version>8.2.0.Final</wildfly.version>
	</properties>

	<dependencies>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-webmvc</artifactId>
			<version>${spring.version}</version>
		</dependency>

		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>jstl</artifactId>
			<version>${jstl.version}</version>
		</dependency>

	</dependencies>

	<build>
		<plugins>
		    <plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.3</version>
				<configuration>
					<source>${jdk.version}</source>
					<target>${jdk.version}</target>
				</configuration>
			</plugin>
			 <plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-war-plugin</artifactId>
				<version>${maven.war.plugin.version}</version>
				<configuration>
					<warSourceDirectory>src/main/webapp</warSourceDirectory>
					<warName>oceantestws</warName>
					<failOnMissingWebXml>false</failOnMissingWebXml>
				</configuration>
			</plugin>
			
			<plugin>
                <groupId>org.wildfly.plugins</groupId>
                <artifactId>wildfly-maven-plugin</artifactId>
                <version>${wildfly.maven.plugin.version}</version>
                <configuration>
                    <filename>${project.artifactId}.${project.packaging}</filename>
                    <wildflyExtractedDir>${project.basedir}</wildflyExtractedDir>
                    <version>${wildfly.version}</version>
                    <jvmArgs>
                        -Xms64m -Xmx512m -XX:MaxPermSize=512m -Djava.net.preferIPv4Stack=true
                        -Djboss.http.port=9010
                        -Djboss.ajp.port=9110
                        -Djboss.management.http.port=9210
                        -Djboss.https.port=9310
                        -Dnbsweb.defaultPermissions=0
                        -Djboss.bind.address=0.0.0.0
                    </jvmArgs>
                    <!--
                    -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=9404
                    -Dmgnt-users-properties-path=../../../../wildfly/mgmt-users.properties 
                    manage port for this plugin to perform deployment
                    <username>admin</username>
					<password>admin</password> 
                    -->
                    <port>9210</port>
                </configuration>
            </plugin>
		</plugins>
	</build>

</project>
